# SpotifyIO

./: LICENSE  Pipfile  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_static/css/: attributetable.css
spotifyio/: __init__.py  album.py  artist.py  asset.py  auth.py  client.py  exceptions.py  http.py  iterators.py  mixins.py  playlist.py  scopes.py  state.py  track.py  user.py
spotifyio/types/: __init__.py  album.py  artist.py  asset.py  list_item.py  paginated.py  payload.py  playlist.py  spotify.py  track.py  user.py
spotifyio/utils/: chunked.py  list_iterator.py  paginator.py  time.py
